--- a/Tabi/CMakeLists.txt
+++ b/Tabi/CMakeLists.txt
@@ -4,5 +4,5 @@ cmake_minimum_required (VERSION 3.8)
 add_subdirectory("Common")
 
 add_subdirectory("Core")
-#add_subdirectory("Graphics")
+add_subdirectory("Graphics")
 add_subdirectory("Logger")
