--- a/Tabi/Core/CMakeLists.txt
+++ b/Tabi/Core/CMakeLists.txt
@@ -21,6 +21,6 @@ target_include_directories(Core PUBLIC ${CMAKE_CURRENT_LIST_DIR}/inc)
 
 # Add libraries
 # PUBLIC: Used in headers and source files
-target_link_libraries(Core PUBLIC TabiCommon)
+target_link_libraries(Core PUBLIC TabiCommon Graphics)
 # PRIVATE: Used in source files
 target_link_libraries(Core PRIVATE Logger)
