--- a/Tabi/Graphics/CMakeLists.txt
+++ b/Tabi/Graphics/CMakeLists.txt
@@ -5,17 +5,25 @@ cmake_minimum_required (VERSION 3.8)
 set(HEADERS
     inc/IWindow.h
     inc/IRenderer.h
+    inc/Windows/OpenGL/OpenGLWindow.h
 )
 
-# Set sources for Logger
+# Set sources for Graphics
 set(SOURCES
     src/IRenderer.cpp
+    src/IWindow.cpp
+    src/Windows/OpenGL/OpenGLWindow.cpp
 )
 
 # Add source to this project's executable.
 add_library(Graphics EXCLUDE_FROM_ALL ${SOURCES} ${HEADERS})
 
+
+# Add third-party includes
+set (GLAD_DIR ${CMAKE_SOURCE_DIR}/ThirdParty/glad/)
+
 target_include_directories(Graphics PUBLIC ${CMAKE_CURRENT_LIST_DIR}/inc)
+#target_include_directories(Graphics PRIVATE ${GLAD_DIR}/include)
 
 # Add libraries
-target_link_libraries(Graphics PUBLIC TabiCommon)
+target_link_libraries(Graphics PUBLIC TabiCommon Logger Core GLAD)
