Added file system
- Added two basic shaders (for testing)
- Implemented Renderer::CreateShaderProgram(string, string)
- Asset folder now gets copied over to the output folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,6 @@ endif ()
 add_subdirectory ("Tabi")
 add_subdirectory("Game")
 add_subdirectory("ThirdParty")
+
+# Copy assets to output directory
+file(COPY "Assets" DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
