--- a/Tabi/CMakeLists.txt
+++ b/Tabi/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory("Common")
 add_subdirectory("Core")
 add_subdirectory("Graphics")
 add_subdirectory("Logger")
+add_subdirectory("FileSystem")
