Added ResourceManager and Utilities
- Added tabi::pair and tabi::make_pair
- Fixed an issue with tabi::map not compiling

--- a/Tabi/Graphics/CMakeLists.txt
+++ b/Tabi/Graphics/CMakeLists.txt
@@ -1,4 +1,4 @@
-# CMakeList.txt : CMake project for Common
+# CMakeList.txt : CMake project for Graphics
 cmake_minimum_required (VERSION 3.8)
 
 # Set headers for Graphics
