--- a/Tabi/CMakeLists.txt
+++ b/Tabi/CMakeLists.txt
@@ -7,3 +7,5 @@ add_subdirectory("Core")
 add_subdirectory("Graphics")
 add_subdirectory("Logger")
 add_subdirectory("FileSystem")
+add_subdirectory("ResourceManager")
+add_subdirectory("Utilities")
