Added camera, light, mesh, model, texture and material classes
- Moved utility functions to utils namespace
- Broke OpenGLRenderer's BufferMesh by not having interleaved vertices

--- a/Tabi/Graphics/CMakeLists.txt
+++ b/Tabi/Graphics/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required (VERSION 3.8)
 
 # Set headers for Graphics
 set(HEADERS
+    inc/Camera.h
+    inc/Light.h
     inc/IWindow.h
     inc/IRenderer.h
     inc/IContext.h
