--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -2,12 +2,19 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Set headers for Game
-set(HEADERS)
+set(HEADERS
+	inc/TestGameMode.h
+)
 
 # Set sources for Game
-set(SOURCES src/main.cpp)
+set(SOURCES 
+	src/main.cpp
+	src/TestGameMode.cpp
+)
 
 # Add source to this project's executable.
 add_executable (Game ${SOURCES} ${HEADERS})
+
+target_include_directories(Game PUBLIC ${CMAKE_CURRENT_LIST_DIR}/inc)
 
 target_link_libraries(Game PRIVATE Core Logger)
