--- a/Tabi/Core/CMakeLists.txt
+++ b/Tabi/Core/CMakeLists.txt
@@ -28,5 +28,5 @@ target_link_libraries(Core PRIVATE Logger)
 add_custom_command(
     TARGET Core
     POST_BUILD
-    COMMAND robocopy "${CMAKE_SOURCE_DIR}/TabiAssets" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TabiAssets" /NJS /NDL /NJH /ns /nc /np /XO /XX /E /NFL > NUL
+    COMMAND xcopy \"${CMAKE_SOURCE_DIR}/TabiAssets\" \"${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TabiAssets\" /S /Y /I /C
 )
