Added math classes
This might be a terrible idea.

--- a/Tabi/CMakeLists.txt
+++ b/Tabi/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory("Logger")
 add_subdirectory("FileSystem")
 add_subdirectory("ResourceManager")
 add_subdirectory("Utilities")
+add_subdirectory("Math")
