Renderer now uses Camera. Mesh rendering now takes a transformation matrix.

--- a/Tabi/Graphics/CMakeLists.txt
+++ b/Tabi/Graphics/CMakeLists.txt
@@ -16,6 +16,7 @@ set(HEADERS
 
 # Set sources for Graphics
 set(SOURCES
+    src/Camera.cpp
     src/IRenderer.cpp
     src/IWindow.cpp
     src/Windows/WindowsWindow.cpp
