--- a/Tabi/CMakeLists.txt
+++ b/Tabi/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory("FileSystem")
 add_subdirectory("ResourceManager")
 add_subdirectory("Utilities")
 add_subdirectory("Math")
+add_subdirectory("Input")
