Application now updates input
And updated Input's CMakeLists

--- a/Tabi/Core/CMakeLists.txt
+++ b/Tabi/Core/CMakeLists.txt
@@ -23,7 +23,7 @@ target_include_directories(Core PUBLIC ${CMAKE_CURRENT_LIST_DIR}/inc)
 # PUBLIC: Used in headers and source files
 target_link_libraries(Core PUBLIC TabiCommon Graphics)
 # PRIVATE: Used in source files
-target_link_libraries(Core PRIVATE Logger)
+target_link_libraries(Core PRIVATE Logger Input)
 
 add_custom_command(
     TARGET Core
