--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -4,12 +4,14 @@ cmake_minimum_required (VERSION 3.8)
 # Set headers for Game
 set(HEADERS
 	inc/TestGameMode.h
+	inc/MovableCamera.h
 )
 
 # Set sources for Game
 set(SOURCES 
 	src/main.cpp
 	src/TestGameMode.cpp
+	src/MovableCamera.cpp
 )
 
 # Add source to this project's executable.
@@ -17,7 +19,7 @@ add_executable (Game ${SOURCES} ${HEADERS})
 
 target_include_directories(Game PUBLIC ${CMAKE_CURRENT_LIST_DIR}/inc)
 
-target_link_libraries(Game PRIVATE Core Logger)
+target_link_libraries(Game PRIVATE Core Logger Input)
 
 
 add_custom_command(
