Made it possible for the window to be resized (and have OpenGL update the viewport)
- Moved some functions to a source file (IWindow)
- Added Initialize-function to IRenderer (to set the window)

--- a/Tabi/Graphics/CMakeLists.txt
+++ b/Tabi/Graphics/CMakeLists.txt
@@ -15,6 +15,7 @@ set(HEADERS
 set(SOURCES
     src/Camera.cpp
     src/IRenderer.cpp
+    src/IContext.cpp
     src/IWindow.cpp
     src/ISampler.cpp
 )
