Added controller enum
Also made gainput link xinput if on Windows

--- a/Tabi/Input/CMakeLists.txt
+++ b/Tabi/Input/CMakeLists.txt
@@ -5,6 +5,7 @@ cmake_minimum_required (VERSION 3.8)
 set(HEADERS
     inc/InputManager.h
     inc/IInputHandler.h
+    inc/Enums/EController.h
     inc/Enums/EMouse.h
     inc/Enums/EKeyboard.h
     inc/Enums/EInputDevice.h
