--- a/Tabi/Utilities/CMakeLists.txt
+++ b/Tabi/Utilities/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required (VERSION 3.8)
 # Set headers for ResourceManager
 set(HEADERS
     inc/TabiUtilities.h
-    inc/Delegate.h
+    inc/TabiEvent.h
 )
 
 # Set sources for Utilities
