Added vec3 operator unit tests

--- a/UnitTests/Math/CMakeLists.txt
+++ b/UnitTests/Math/CMakeLists.txt
@@ -25,6 +25,8 @@ set(SOURCES
     mat4/Rotation.cpp
     mat4/Operators.cpp
     mat4/Misc.cpp
+
+    vec3/Operators.cpp
 )
 
 set(test_name math_tests)
