Added vec2 unit tests

--- a/UnitTests/Math/CMakeLists.txt
+++ b/UnitTests/Math/CMakeLists.txt
@@ -26,6 +26,9 @@ set(SOURCES
     mat4/Operators.cpp
     mat4/Misc.cpp
 
+    vec2/Operators.cpp
+    vec2/Misc.cpp
+
     vec3/Operators.cpp
     vec3/Misc.cpp
 )
