Enhancements/unit tests (#9)
* Started working on unit tests

Should I have done this while working on features? Probably.

* Made it possible for CTest to find the test executable

* Added running tests to workflow

* Made CTest show output when a test fails

* Added second mat4 constructor

* Added predicates

* Added more test cases, and replaced EQ with predicates

* Predicates now output all errors, rather than just the first one

* Added rotation test cases (and probably fixed mat4 rotation?)

* Removed double spaces

* Added matrix operator unit tests

* Added vec3 operator unit tests

* Added more vec3 tests

* Renamed "divier" variable to "divisor"

* Added vec2 unit tests

* Fixed issues with vec2

* Added vec2 constructor to vec3

* Added dot, normalize, and length functions to vec4, and fixed some potential issues

* Added vec4 unit tests

* Made GetSignature constant

* Added ECS tests

Please send help, I'm creatively bankrupt when it comes to tests. And it's not like the ECS was set up with tests in mind in the first place.

* Made SinkPtr a shared ptr in an attempt to prevent ownership issues

* Added correct namespace for function

* Removed unnecessary includes

* Added logger tests

* Fixed string replacement

* Added ResourceManager tests

* Removed a logger test as it failed when run with all other test cases, but not when run alone

* Fixed an issue with event system unsubscribing for static functions

* Added tests for event system

--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -37,6 +37,12 @@ jobs:
           robocopy /move "bin/%PLATFORM%/%BUILD_TYPE%/bin/%BUILD_TYPE%" "bin/%PLATFORM%/%BUILD_TYPE%/bin"
           exit 0
         )
+
+    - name: Run Tests
+      shell: cmd
+      run: |
+        cd out/project
+        ctest -C %BUILD_TYPE% --output-on-failure
       
     - name: Archive Artifacts
       uses: actions/upload-artifact@v2
