--- a/Tabi/Renderer/CMakeLists.txt
+++ b/Tabi/Renderer/CMakeLists.txt
@@ -35,16 +35,6 @@ if(WINDOWS)
     )
 endif()
 
-if(USE_OPENGL)
-    list(APPEND HEADERS 
-        
-    )
-    
-    list(APPEND SOURCES
-        
-    )
-endif()
-
 # Add source to this project's executable.
 add_library(Renderer EXCLUDE_FROM_ALL ${SOURCES} ${HEADERS})
 
@@ -52,3 +42,17 @@ target_include_directories(Renderer PUBLIC ${CMAKE_CURRENT_LIST_DIR}/inc)
 
 # Add libraries
 target_link_libraries(Renderer PUBLIC TabiCommon Logger Core)
+
+if(USE_OPENGL)
+    list(APPEND HEADERS 
+        inc/OpenGL/OpenGLDevice.h
+        inc/OpenGL/OpenGLFence.h
+    )
+    
+    list(APPEND SOURCES
+        src/OpenGL/OpenGLDevice.cpp
+        src/OpenGL/OpenGLFence.cpp
+    )
+
+    target_link_libraries(Renderer PUBLIC GLAD)
+endif()
