Implemented texture and buffer creation functions
And hopefully did so correctly

--- a/Tabi/Renderer/CMakeLists.txt
+++ b/Tabi/Renderer/CMakeLists.txt
@@ -28,6 +28,10 @@ set(SOURCES
     src/IDevice.cpp
 )
 
+if(DEBUG_GRAPHICS)
+    add_compile_definitions(DEBUG_GRAPHICS=1)
+endif()
+
 if(WINDOWS)
     list(APPEND HEADERS 
         
