Removed interface prefix from pipeline classes

--- a/Tabi/Renderer/CMakeLists.txt
+++ b/Tabi/Renderer/CMakeLists.txt
@@ -4,11 +4,11 @@ cmake_minimum_required (VERSION 3.8)
 # Set headers for Renderer
 set(HEADERS
     inc/Buffer.h
+    inc/ComputePipeline.h
+    inc/GraphicsPipeline.h
     inc/ICommandList.h
-    inc/IComputePipeline.h
     inc/IDevice.h
     inc/IFence.h
-    inc/IGraphicsPipeline.h
     inc/IRenderTarget.h
     inc/Sampler.h
     inc/Shader.h
