Renamed IRenderTarget to RenderTarget

--- a/Tabi/Renderer/CMakeLists.txt
+++ b/Tabi/Renderer/CMakeLists.txt
@@ -9,7 +9,7 @@ set(HEADERS
     inc/ICommandList.h
     inc/IDevice.h
     inc/IFence.h
-    inc/IRenderTarget.h
+    inc/RenderTarget.h
     inc/Sampler.h
     inc/Shader.h
     inc/Texture.h
