--- a/Tabi/Graphics/CMakeLists.txt
+++ b/Tabi/Graphics/CMakeLists.txt
@@ -16,7 +16,7 @@ set(SOURCES
     src/IWindow.cpp
 )
 
-if(WINDOWS)
+if(WIN32)
     list(APPEND HEADERS 
         inc/Windows/WindowsWindow.h
     )
