--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -7,10 +7,20 @@
             "inheritEnvironments": [ "msvc_x64_x64" ],
             "buildRoot": "${projectDir}\\out\\build\\${name}",
             "installRoot": "${projectDir}\\out\\install\\${name}",
-            "cmakeCommandArgs": "-DBUILD_PLATFORM=x64 -DBUILD_PLATFORM_STATIC_LIB_EXT=lib -DWINDOWS=TRUE -DUSE_OPENGL=TRUE",
+            "cmakeCommandArgs": "-DBUILD_PLATFORM=x64 -DBUILD_PLATFORM_STATIC_LIB_EXT=lib",
             "buildCommandArgs": "-v",
+            "ctestCommandArgs": ""
+        },
+        {
+            "name": "x64-Release",
+            "generator": "Ninja",
+            "configurationType": "Release",
+            "buildRoot": "${projectDir}\\out\\build\\${name}",
+            "installRoot": "${projectDir}\\out\\install\\${name}",
+            "cmakeCommandArgs": "-DBUILD_PLATFORM=x64 -DBUILD_PLATFORM_STATIC_LIB_EXT=lib",
+            "buildCommandArgs": "",
             "ctestCommandArgs": "",
-            "variables": []
+            "inheritEnvironments": [ "msvc_x64_x64" ]
         }
     ]
 }
