Made it possible to change the available number of components of a type
Tried to make MaxComponentsOfType a compile-time constant, but that would mean we can't cast to the correct ComponentArray type when needed. Went with a vector that is resized in the constructor instead, but left MaxComponentsOfType as a template param everywhere else.

--- a/UnitTests/ECS/CMakeLists.txt
+++ b/UnitTests/ECS/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 3.8)
 
 set(ECS_HELPERS_HEADERS
     Helpers/MockSystem.h
+    Helpers/TestComponent.h
 )
 
 set(ECS_HELPERS_SOURCES
